# stm32-net-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
