[package]
edition = "2021"
name = "embassy-stm32f1-examples"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
# Change stm32f103c8 to your chip name, if necessary.
embassy-stm32 = { version = "0.2.0", path = "../embassy/embassy-stm32", features = [ "defmt", "stm32f103cb", "unstable-pac", "memory-x", "time-driver-any" ]  }
embassy-sync = { version = "0.7.0", path = "../embassy/embassy-sync", features = ["defmt"] }
embassy-executor = { version = "0.7.0", path = "../embassy/embassy-executor", features = ["arch-cortex-m", "executor-thread", "defmt"] }
embassy-time = { version = "0.4.0", path = "../embassy/embassy-time", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-usb = { version = "0.4.0", path = "../embassy/embassy-usb", features = ["defmt"] }
embassy-futures = { version = "0.1.0", path = "../embassy/embassy-futures", features = ["defmt"] }
embassy-net = { version = "0.7.0", path = "../embassy/embassy-net", features = ["defmt", "tcp", "dhcpv4", "medium-ethernet"] }
embassy-net-enc28j60 = { version = "0.2.0", path = "../embassy/embassy-net-enc28j60", features = ["defmt"] }
embedded-io = { version = "0.6.0", features = ["defmt-03"]  }
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
defmt = "1.0.1"
defmt-rtt = "1.0.0"

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-hal = { version = "1.0" }
embedded-hal-async = { version = "1.0" }
embedded-hal-bus = { version = "0.1", features = ["async"] }
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
heapless = { version = "0.8", default-features = false }
nb = "1.0.0"
static_cell = "2.0.0"

[profile.dev]
opt-level = "s"

[profile.release]
opt-level = "s"
debug = 0
